@@ -137,7 +137,12 @@ Upload changed files back to dropbox (or email to students)
 Occasional no java files found when working with queues
 Double check for delimiters being used in strings (especially in method testing)
 Closing popup windows saves changes. no more submit button
-Grade JUnit Tests
+Handle errors in unit tests better, don't give a free A just because the tests screwed up.
+Auto retry when there are problems with dropbox and show a message saying we are having trouble
+Allow line breaks in comments and change comment to a text area
+Fix deleting unit test on dropbox that is required by another unit test.
+    check all unit tests before deleting a unit test on dropbox
+Investigate better JUnit error output.
 demo mode
     Log them into a test dropbox with some test code and files
     Don't allow renaming or deleting, but everything else is enabled
