@@ -1,1 +1,8 @@
-f
+JUnit Output now gets parsed and graded based on that
+
+JUnit tests are now 100% functional and working better than non JUnit Tests
+    The only issue is the error output is kinda crap.
+Fixed bug with multiple JUnit tests and multiple simple unit tests.
+Fixed concurrency issue where unit testing threads would cut off data.
+Fixed a number being wrong with JUnit Tests.
+Fixed possible crashes on startup
